--- a/index.html
+++ b/index.html
@@ -2575,7 +2575,7 @@
         { id: 'hdfc', name: 'HDFC Bank', color: '#', abbr: 'HDFC', logoUrl: 'HDFCBankLogo.png' },
         { id: 'sbi', name: 'SBI', color: '#', abbr: 'SBI', logoUrl: 'SBIBankLogo.png' },
         { id: 'icici', name: 'ICICI Bank', color: '#', abbr: 'ICICI', logoUrl: 'ICICIBankLogo.png' },
-        { id: 'axis', name: 'Axis Bank', color: '#', abbr: 'AXIS', logoUrl: 'AXISBankLogo.png' },
+        { id: 'axis', name: 'Axis Bank', color: '#', abbr: 'AXIS', logoUrl: 'AxisBankLogo.png' },
         { id: 'kotak', name: 'Kotak', color: '#', abbr: 'KTK', logoUrl: 'KotakBankLogo.png' },
         { id: 'rbl', name: 'RBL Bank', color: '#', abbr: 'RBL', logoUrl: 'RBLBankLogo.png' },
         { id: 'indusind', name: 'IndusInd Bank', color: '#', abbr: 'IIB', logoUrl: 'IndusIndBankLogo.webp' },
