--- a/index.html
+++ b/index.html
@@ -2009,7 +2009,7 @@
         }
 
         /* ========================================
-           TIMELINE VIEW
+           TIMELINE VIEW - FIXED LINE ALIGNMENT
         ======================================== */
         .timeline {
             position: relative;
@@ -2019,7 +2019,7 @@
         .timeline::before {
             content: '';
             position: absolute;
-            left: 0;
+            left: 6px;
             top: 0;
             bottom: 0;
             width: 3px;
@@ -2107,24 +2107,29 @@
         }
 
         /* ========================================
-           CALENDAR VIEW
+           CALENDAR VIEW - FIXED MOBILE LAYOUT
         ======================================== */
         .calendar-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
             margin-bottom: 1.5rem;
+            gap: 1rem;
+            flex-wrap: wrap;
         }
 
         .calendar-nav {
             display: flex;
             align-items: center;
-            gap: 1rem;
+            gap: 0.75rem;
+            flex: 1;
+            min-width: 0;
         }
 
         .calendar-nav-btn {
             width: 40px;
             height: 40px;
+            min-width: 40px;
             border-radius: 10px;
             border: 2px solid var(--border-color);
             background: var(--bg-secondary);
@@ -2135,6 +2140,7 @@
             justify-content: center;
             font-size: 1rem;
             transition: all 0.2s ease;
+            flex-shrink: 0;
         }
 
         .calendar-nav-btn:hover {
@@ -2145,6 +2151,35 @@
         .calendar-month {
             font-size: 1.25rem;
             font-weight: 700;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        @media (max-width: 480px) {
+            .calendar-header {
+                gap: 0.75rem;
+            }
+
+            .calendar-nav {
+                gap: 0.5rem;
+            }
+
+            .calendar-nav-btn {
+                width: 36px;
+                height: 36px;
+                min-width: 36px;
+                font-size: 0.9rem;
+            }
+
+            .calendar-month {
+                font-size: 1rem;
+            }
+
+            #todayBtn {
+                padding: 0.5rem 0.75rem;
+                font-size: 0.8rem;
+            }
         }
 
         .calendar-grid {
@@ -2208,7 +2243,7 @@
         }
 
         /* ========================================
-           SETTINGS VIEW
+           SETTINGS VIEW - FIXED SPACING
         ======================================== */
         .settings-section {
             background: var(--bg-secondary);
@@ -2234,11 +2269,17 @@
             align-items: center;
             padding: 1rem 0;
             border-bottom: 1px solid var(--border-color);
+            gap: 1rem;
         }
 
         .settings-item:last-child {
             border-bottom: none;
             padding-bottom: 0;
+        }
+
+        .settings-item-info {
+            flex: 1;
+            min-width: 0;
         }
 
         .settings-item-info h4 {
@@ -2251,6 +2292,7 @@
         .settings-item-info p {
             font-size: 0.8rem;
             color: var(--text-muted);
+            line-height: 1.4;
         }
 
         .data-safety-callout {
@@ -2349,6 +2391,7 @@
             background: var(--bg-tertiary);
             padding: 0.375rem;
             border-radius: 10px;
+            flex-shrink: 0;
         }
 
         .freq-btn {
@@ -2797,6 +2840,14 @@
             .copyright-links {
                 gap: 1rem;
             }
+
+            .settings-item {
+                flex-wrap: wrap;
+            }
+
+            .notification-frequency-selector {
+                margin-top: 0.5rem;
+            }
         }
 
         /* ========================================
@@ -2833,13 +2884,13 @@
     </div>
 </header>
 
-<!-- Navigation Tabs -->
+<!-- Navigation Tabs - FIXED: Changed Timeline icon from 📅 to ⏰ -->
 <nav class="nav-tabs">
     <button class="nav-tab active" data-view="dashboard">
         🏠 <span>Dashboard</span>
     </button>
     <button class="nav-tab" data-view="timeline">
-        📅 <span>Timeline</span>
+        ⏰ <span>Upcoming</span>
     </button>
     <button class="nav-tab" data-view="calendar">
         🗓️ <span>Calendar</span>
@@ -2926,7 +2977,8 @@
 
     <!-- Settings View -->
     <section class="view" id="settingsView">
-        <div class="settings-section">
+        <!-- Notifications Section -->
+        <div class="settings-section" id="notificationsSection">
             <h3 class="settings-section-title">🔔 Notifications</h3>
 
             <div class="settings-item">
@@ -3064,7 +3116,6 @@
                 </div>
             </div>
         </div>
-        </div>
 
         <div class="settings-section">
             <h3 class="settings-section-title">🎨 Appearance</h3>
@@ -3080,7 +3131,8 @@
             </div>
         </div>
 
-        <div class="settings-section">
+        <!-- Data Management Section -->
+        <div class="settings-section" id="dataManagementSection">
             <h3 class="settings-section-title">💾 Data Management</h3>
 
             <div class="data-safety-callout">
@@ -3591,6 +3643,17 @@
             diners: '<img src="dinerslogo.png" alt="Diners" onerror="this.parentElement.innerHTML=\'<span class=network-logo-text>DINERS</span>\'">'
         };
         return logos[network] || logos.visa;
+    }
+
+    // Short month names for mobile calendar
+    function getShortMonthName(monthIndex) {
+        const shortMonths = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'];
+        return shortMonths[monthIndex];
+    }
+
+    function getFullMonthName(monthIndex) {
+        const fullMonths = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
+        return fullMonths[monthIndex];
     }
 
     // ========================================
@@ -4234,13 +4297,8 @@
 
         let html = '';
 
-        // Credit Card Container with theme class
         html += '<div class="credit-card ' + themeClass + '" onclick="openCardActionsModal(\'' + card.id + '\')">';
-
-        // Card Header - Bank Info & Chip
         html += '<div class="card-header">';
-
-        // Bank info section
         html += '<div class="bank-info">';
         html += '<div class="bank-logo">' + logoContent + '</div>';
         html += '<div class="bank-details">';
@@ -4248,39 +4306,22 @@
         if (card.cardName) {
             html += '<span class="card-variant">' + card.cardName + '</span>';
         }
-        html += '</div>';
-        html += '</div>';
-
-        // Chip and contactless section
+        html += '</div></div>';
         html += '<div class="chip-contactless">';
         html += '<div class="emv-chip"><div class="chip-lines"></div></div>';
         html += '<div class="contactless-icon">';
         html += '<img src="NFCIcon.png" alt="Contactless" onerror="this.parentElement.innerHTML=\'<div class=contactless-waves><div class=wave></div><div class=wave></div><div class=wave></div></div>\'">';
-        html += '</div>';
-        html += '</div>';
-
-        html += '</div>'; // End card-header
-
-        // Card Middle - Card Number
+        html += '</div></div></div>';
         html += '<div class="card-middle">';
         html += '<div class="card-number">•••• •••• •••• ' + card.last4Digits + '</div>';
         html += '</div>';
-
-        // Card Bottom - Cardholder & Network
         html += '<div class="card-bottom">';
-
-        // Cardholder section
         html += '<div class="cardholder-section">';
         html += '<div class="cardholder-label">Card Holder</div>';
         html += '<div class="cardholder-name">' + (card.cardHolderName || 'CARD HOLDER') + '</div>';
         html += '</div>';
-
-        // Network logo
         html += '<div class="card-network">' + networkLogo + '</div>';
-
-        html += '</div>'; // End card-bottom
-
-        // Payment Info Bar at Bottom
+        html += '</div>';
         html += '<div class="payment-info">';
         html += '<div class="date-info">';
         html += '<div class="date-item">';
@@ -4290,12 +4331,9 @@
         html += '<div class="date-item">';
         html += '<span class="date-label">Due Date</span>';
         html += '<span class="date-value">' + getOrdinal(card.dueDate) + '</span>';
-        html += '</div>';
-        html += '</div>';
+        html += '</div></div>';
         html += '<div class="status-badge ' + dueStatus.class + '">' + dueStatus.text + '</div>';
-        html += '</div>'; // End payment-info
-
-        html += '</div>'; // End credit-card
+        html += '</div></div>';
 
         return html;
     }
@@ -4424,7 +4462,7 @@
         const timeline = document.getElementById('timeline');
 
         if (state.cards.length === 0) {
-            timeline.innerHTML = '<div class="empty-state"><div class="empty-state-icon">📅</div><h3>No Upcoming Dates</h3><p>Add credit cards to see their due dates here</p></div>';
+            timeline.innerHTML = '<div class="empty-state"><div class="empty-state-icon">⏰</div><h3>No Upcoming Dates</h3><p>Add credit cards to see their due dates here</p></div>';
             return;
         }
 
@@ -4468,9 +4506,11 @@
 
         const year = state.calendarDate.getFullYear();
         const month = state.calendarDate.getMonth();
-        const monthNames = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
 
-        monthLabel.textContent = monthNames[month] + ' ' + year;
+        // Use short month name on mobile, full on desktop
+        const isMobile = window.innerWidth <= 480;
+        const monthName = isMobile ? getShortMonthName(month) : getFullMonthName(month);
+        monthLabel.textContent = monthName + ' ' + year;
 
         const firstDay = new Date(year, month, 1);
         const lastDay = new Date(year, month + 1, 0);
@@ -4863,6 +4903,22 @@
         else if (viewName === 'settings') updateSchedulePreview();
     }
 
+    // Function to scroll to a specific section
+    function scrollToSection(sectionId) {
+        const section = document.getElementById(sectionId);
+        if (section) {
+            setTimeout(function() {
+                section.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                // Add a highlight effect
+                section.style.transition = 'box-shadow 0.3s ease';
+                section.style.boxShadow = '0 0 0 3px var(--accent-primary)';
+                setTimeout(function() {
+                    section.style.boxShadow = '';
+                }, 2000);
+            }, 100);
+        }
+    }
+
     // ========================================
     // TOAST NOTIFICATIONS
     // ========================================
@@ -4958,17 +5014,19 @@
             if (e.target.id === 'accountModal') closeAccountModal();
         });
 
-        // Account menu items
+        // Account menu items - FIXED: Now properly navigates to sections
         document.getElementById('accountProfileBtn').addEventListener('click', function() {
             showToast('Profile settings coming soon!', 'info');
         });
         document.getElementById('accountNotifBtn').addEventListener('click', function() {
             closeAccountModal();
             switchView('settings');
+            scrollToSection('notificationsSection');
         });
         document.getElementById('accountBackupBtn').addEventListener('click', function() {
             closeAccountModal();
             switchView('settings');
+            scrollToSection('dataManagementSection');
         });
         document.getElementById('accountHelpBtn').addEventListener('click', function() {
             showToast('Help center coming soon!', 'info');
@@ -5126,6 +5184,13 @@
             if ((e.ctrlKey || e.metaKey) && e.key === 'n') {
                 e.preventDefault();
                 openAddCardModal();
+            }
+        });
+
+        // Window resize - update calendar month display
+        window.addEventListener('resize', function() {
+            if (state.currentView === 'calendar') {
+                renderCalendar();
             }
         });
 
